
Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.4.1] – 2026-01-26
### Changed
- Titelbereich auf eine transparente Statusanzeige reduziert, ohne Titelnamen.
- Dateifelder standardmäßig ausgeblendet und Datei-Statusindikator im Header ergänzt.

## [1.4.0] – 2026-01-24
### Added
- Umschalter im Modal, um Meldung, Partnummer und Seriennummer als Copy-Buttons ein- oder auszublenden.

### Changed
- Meldung, Partnummer und Seriennummer sind standardmäßig ausgeblendet und erscheinen erst nach Aktivierung im Modal.

## [1.3.0] – 2025-10-23
### Added
- Einstellung zum Ausblenden des Modulnamens und neue Voreinstellung zum Starten mit eingeklappten Dateifeldern.
- Umschaltbare Dateifelder mit kompakter Zusammenfassung für Aspen- und Kommentar-Datei.

### Changed
- Der Status (eingeklappt/ausgeklappt) der Dateifelder wird pro Modulinstanz gespeichert.

## [1.2.2] – 2025-10-13
### Changed
- Kontextmenü in ein vollwertiges Modal mit Aktionen für Aspen- und Kommentar-Dateien überführt, inklusive Header, Sektionen und
  klarer Button-Gruppierung.

## [1.2.1] – 2025-10-02
### Changed
- Ausgewählte Kommentar- und Aspen-Dateien behalten nun ihren vollständigen Namen inklusive Unterordnerpfad und werden nach dem Laden in Status und Tooltips angezeigt.
- Gespeicherte Datei-Handles setzen automatisch Pfad und Label, sobald eine Sitzung erneut geöffnet oder eine Datei neu verbunden wird.

## [1.2.0] – 2025-10-02
### Added
- Kontextmenü mit Aktionen zum Auswählen, Erstellen, Neuladen und Löschen der Kommentar-Datei direkt im Modul.
- Unterstützung zum Erstellen einer neuen Excel-Kommentarvorlage inklusive Speicherung des Datei-Handles in IndexedDB für spätere Sitzungen.
- Automatische Aktualisierung der aktiven Meldung sowie PN/SN und Kommentare via Storage-/Event-Listener und periodischem Hintergrundabgleich.

## [1.1.4] – 2025-09-23